[package]
name = "arduino_audio_stream"
version = "0.1.0"
authors = ["DasEtwas <18222134+DasEtwas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
clap = "2.33.3"
hound = "3.4.0"